Fixes spacing on main header

--- a/app/assets/stylesheets/headers/main_header.scss
+++ b/app/assets/stylesheets/headers/main_header.scss
@@ -6,10 +6,15 @@
   width: 100%;
   height: 44px;
   z-index: 2;
+  display: flex;
+  justify-content: space-around;
+}
+
+.main-nav-left {
+  margin-left: 4%;
 }
 
 .main-logo {
-  margin-left: 11%;
   margin-top: 5px;
   margin-bottom: 5px;
   display: inline-block;
@@ -32,10 +37,7 @@
 
 .main-nav-right {
   display: flex;
-  float: right;
-  margin-right: 15%;
   height: 100%;
-  width: 39%;
 }
 
 .main-nav-right .search-bar {
